--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Gheni Abla
 author: Gheni Abla
 
 # Short bio or description (displayed in the header)
-description: Gheni Abla's Personal Website
+description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/reverie.png
