--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Gheni Abla
 description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/gheni.jpeg
 
 #
 # Flags below are optional
