--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ avatar: /images/gheni.jpeg
 footer-links:
   email: Gheni.Abla@gmail.com
   github: github.com/gheniabla
-  instagram:gheniabla
+  instagram: @gheniabla
   linkedin: https://www.linkedin.com/in/gheniabla/
   twitter: @gheniabla
   youtube: # channel/<your_long_string> or user/<user-name>
