--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,7 @@ avatar: /images/gheni.jpeg
 # Includes an icon in the footer for each username you enter
 footer-links:
   email: Gheni.Abla@gmail.com
-  github: github.com/gheniabla
-  instagram: @gheniabla
+  github: https://github.com/gheniabla
   linkedin: https://www.linkedin.com/in/gheniabla/
   twitter: @gheniabla
   youtube: # channel/<your_long_string> or user/<user-name>
