--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ footer-links:
   #flickr:
   github: github.com/gheniabla
   instagram:
-  linkedin: https://www.linkedin.com/in/gheniabla/
+  linkedin: gheniabla
   pinterest:
   rss: rss
   twitter: gheniabla
