--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Gheni Abla
 author: Gheni Abla
 
 # Short bio or description (displayed in the header)
-description: I enjoy building software products and leading teams  
+description: I enjoy building products and leading teams  
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/gheni.jpeg
